@@ -51,6 +51,6 @@ importFrom(jsonlite,toJSON)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
-importFrom(tools,R_user_dir)
+importFrom(rappdirs,user_cache_dir)
 importFrom(utils,URLencode)
 importFrom(utils,tail)
